fix: change icon to work in dark mode and eu link to work when language is english

--- a/sass/components/_categorical-display.scss
+++ b/sass/components/_categorical-display.scss
@@ -290,6 +290,16 @@
                     color: themed('CatDisplayCatTitleText');
                     background-color: themed('CatDisplayCatContentBg');
                 }
+
+                .ic-icon {
+                    svg {
+                        width: 16px;
+                        height: 16px;
+                        @include themify($themes) {
+                            fill: themed('IndicatorListItemText');
+                        }
+                    }
+                }
             }
         }
     }
